Fix parent relationship